@@ -1,3 +1,7 @@
+2008-02-22  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* annealing.tcl: Added function for combinatorial problems
+	* annealing.man: Described new function
+
 2008-01-11  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* annealing.tcl: Package for simulated annealing added
 	* annealing.man: Description of simulated annealing added
